# labrador

./: .gitignore  README.md  pyproject.toml  requirements.txt  syder_test.py  test.py  test_slate.py
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: lint.yml  pages-build-deployment.yml  sphinx-docs
beekeeper/monitor/: watsonx.py
deeptext/embeddings/: __init__.py  huggingface.py  watsonx.py
deeptext/evaluation/: __init__.py  knowledge_base_coverage.py
deeptext/readers/: __init__.py  directory.py  s3.py  watson_discovery.py
deeptext/retrievers/: watson_discovery.py
deeptext/text_splitters/: __init__.py  semantic.py  sentence.py  token.py
deeptext/vector_stores/: __init__.py  chroma.py  elasticsearch.py
deeptxt/embeddings/: __init__.py  huggingface.py  watsonx.py
deeptxt/evaluation/: __init__.py  knowledge_base_coverage.py
deeptxt/readers/: __init__.py  directory.py  s3.py  watson_discovery.py
deeptxt/retrievers/: __init__.py  watson_discovery.py
deeptxt/text_splitters/: __init__.py  semantic.py  sentence.py  token.py
deeptxt/vector_stores/: __init__.py  chroma.py  elasticsearch.py
docs/: Makefile  conf.py  index.rst  install.rst  schema.rst
docs/_static/: custom.css
docs/document_loaders/: directory.rst  docx.rst  html.rst  index.rst  json.rst  pdf.rst  s3.rst  watson_discovery.rst
docs/embeddings/: huggingface.rst  index.rst  watsonx.rst
docs/evaluation/: coverage.rst  index.rst  knowledge_base_coverage.rst
docs/monitor/: ibm_watsonx_governance.rst
docs/monitors/: ibm_watsonx_governance.rst
docs/readers/: directory.rst  docx.rst  html.rst  index.rst  json.rst  pdf.rst  s3.rst  watson_discovery.rst
docs/retrievers/: watson_discovery.rst
docs/text_chunkers/: token.rst
docs/text_splitters/: index.rst  semantic.rst  sentence.rst  token.rst
docs/vector_stores/: chroma.rst  elasticsearch.rst  index.rst
labrador/embeddings/: huggingface.py
labrador/evaluation/: knowledge_base_coverage.py
labrador/monitor/: watsonx.py
labrador/text_splitters/: semantic.py
(+149 files in other folders)
