[build-system]
requires = ["setuptools >= 61.0","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slate_index"
version = "0.1.0"
description = "A small example package"
readme = "README.md"
license = {text = "MIT License"}
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.10"',
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application ",
    "Frameworks",
]

[project.urls]
Homepage = "https://github.com/leonardofurnielis/slate_index"
Issues = "https://github.com/leonardofurnielis/slate_index/issues"