[build-system]
requires = ["setuptools >= 61.0","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slate_index"
version = "0.1.0"
description = "A small example package"
readme = "README.md"
license = {text = "MIT License"}
dependencies = [
    'llama-index-core = "^0.10.30"',
    'llama-index-readers-file = "^0.1.19"',
    'langchain-core = "^0.1.48"',
    'langchain-community = "^0.0.36"',
    'langchain-text-splitters = "^0.0.1"',
    'langchain-experimental = "^0.0.57"',
    'sentence-transformers = "^2.7.0"',
    'pydantic = "^2.7.1"',
    'pypdf = "^4.2.0"',
    'torch == 2.1.0',
    'elasticsearch = "^8.13.0"',
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application ",
    "Frameworks",
]

[project.urls]
Homepage = "https://github.com/leonardofurnielis/slate_index"
Issues = "https://github.com/leonardofurnielis/slate_index/issues"